--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<!--HEADER-->
 			<div id="header">
 				<!--SWITCH-->
-				<label class="switch">
+				<label id="switch">
 					<input type="checkbox" id="checkbox" value="1" onclick="themeChanger()">
 					<span class="slider round"></span>
 				</label>
