--- a/help/help_bm_pl.html
+++ b/help/help_bm_pl.html
@@ -8,6 +8,8 @@
 		<meta name="description" content="Calculator">
 		<meta name="keywords" content="HTML, CSS, JavaScript, Calculator">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" href="../data/favicon/favicon.ico">
+		<link rel="icon" href="../data/favicon/favicon.ico">
 		<link rel="stylesheet" href="../css/style_help_bm.css">
 		<script src="../scripts/script_help.js"></script>
     </head>
