--- a/index_bm.html
+++ b/index_bm.html
@@ -9,6 +9,8 @@
 		<meta name="keywords" content="HTML, CSS, JavaScript, Calculator">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/style_bm.css">
+		<link rel="shortcut icon" href="data/favicon/favicon.ico">
+		<link rel="icon" href="data/favicon/favicon.ico">
 		<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 		<script src="scripts/script.js"></script>
     </head>
