--- a/help/help_pl.html
+++ b/help/help_pl.html
@@ -78,7 +78,7 @@
 				</div>
 				<div class="legend">
 					<div class="l_left">Keyboard &#129040;</div>
-					<div class="l_right">press <b>backspace</b> on your keyboard in order to <b>clear the equation</b></div>
+					<div class="l_right">press <b>backspace</b> on your keyboard in order to <b>delete the last input</b></div>
 				</div>
 				<div class="legend">
 					<div class="l_left">Keyboard ins</div>
