--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="shortcut icon" href="data/favicon/favicon.ico">
 		<link rel="icon" href="data/favicon/favicon.ico">
 		<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+		<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 		<script src="scripts/script.js"></script>
     </head>
 	<!--BODY-->
@@ -26,7 +27,7 @@
 					<span class="slider round"></span>
 				</label>
 				<!--TITLE-->
-				<div id="title"><text id="title_t">Calculator</text></div>
+				<div id="title"><text id="title_t">calculator</text></div>
 			</div>
 			<!--BLOCK-->
 			<div id="block">
