--- a/index_bm.html
+++ b/index_bm.html
@@ -26,7 +26,7 @@
 					<span class="slider round"></span>
 				</label>
 				<!--TITLE-->
-				<div id="title"><text id="title_t">Calculator</text></div>
+				<div id="title"><text id="title_t">calculator</text></div>
 			</div>
 			<!--BLOCK-->
 			<div id="block">
