--- a/help/help.html
+++ b/help/help.html
@@ -25,7 +25,7 @@
 					<span class="slider round"></span>
 				</label>
 				<!--TITLE-->
-				<div id="title"><text id="title_t">Calculator - Help</text></div>
+				<div id="title"><text id="title_t">calculator - Help</text></div>
 			</div>
 			<div class="filler_top"></div>
 			<div id="block">
