--- a/index_mobile.html
+++ b/index_mobile.html
@@ -26,6 +26,22 @@
 				</div>
 				<!--TITLE-->
 				<div id="title"><text id="title_t">calculator</text></div>
+				<!--HISTORYPPOP-->
+				<div id="buttons_right">
+					<div id="pop_button"><</div>
+				</div>
+				<!--HISTORYPANEL-->
+				<div id="pop">
+					<div id="pop_header">
+						<div id="pop_back">></div>
+						<div id="pop_title">history</div>	
+					</div>
+					<div id="pop_block">
+						<div id="pop_hblock">
+						</div>
+						<div id="pop_history" onclick="historyClean()">🗑</div>
+					</div>
+				</div>
 			</div>
 			<!--BLOCK-->
 			<div id="block">
